Refactor cron job code